--- a/src/components/Reasons/Reasons.css
+++ b/src/components/Reasons/Reasons.css
@@ -66,3 +66,27 @@ height: 11.2rem;
     font-size: 3rem;
     font-weight: bold;
 }
+.detail-r{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+.details-r>div{
+display: flex;
+font-size: 1rem;
+gap: 1rem;
+}
+
+.details-r>div>img{
+width: 2rem;
+height: 2rem;
+
+}
+.partners{
+    display: flex;
+    gap: 1rem;
+}
+
+.partners>img{
+    width: 2.5rem;
+}
