--- a/src/components/Testimonials/Testimonials.css
+++ b/src/components/Testimonials/Testimonials.css
@@ -64,6 +64,21 @@
 .right-t>:nth-child(2) {
     position: absolute;
     width: 17rem;
+    right: 7rem;
     height:19rem;top: 4rem;
     background: var(--planCard);
+}
+
+.arrows{
+    display: flex;
+    gap:1rem;
+    position: absolute;
+    bottom: 1rem;
+    left: 3rem;
+}
+
+.arrows>img{
+    width: 1.5rem;
+    cursor: pointer;
+
 }
