--- a/src/App.css
+++ b/src/App.css
@@ -41,3 +41,11 @@
 .btn:hover{
   cursor:pointer;
 }
+
+.blur{
+  background: rgba(253,120,43,0.69);
+  position: absolute;
+  border-radius: 50%;
+  filter: blur(120px);
+  z-index: -9;
+}
