--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -16,17 +16,28 @@
     justify-content: center;
     height: 20rem;
 }
-.social-links{   
-     display: flex;
-     gap: 4rem;   
+
+.social-links {
+    display: flex;
+    gap: 4rem;
 }
-.social-links>img{   
+
+.social-links>img {
     width: 2rem;
     height: 2rem;
-    cursor: pointer;  
+    cursor: pointer;
 
 }
 
-.logo-f>img{
+.logo-f>img {
     width: 10rem;
+}
+
+.blur-f-1{
+    bottom: 0rem;
+    right: 15%;
+    width: 26rem;
+    height: 12rem;
+    filter: blur(200px);
+    background:rgb(255,115,0);
 }
