--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -137,23 +137,27 @@
     top: 7rem;
 }
 
-.heart-rate>img{
+.heart-rate>img {
     width: 2rem;
 }
+
 .heart-rate>:nth-child(2) {
     color: var(--gray);
 }
+
 .heart-rate>:nth-child(3) {
     color: white;
     font-size: 1.5rem;
 }
-.hero-image{
+
+.hero-image {
     position: absolute;
     top: 10rem;
     right: 8rem;
     width: 23rem;
 }
-.hero-image-back{
+
+.hero-image-back {
 
     position: absolute;
     top: 4rem;
@@ -161,39 +165,136 @@
     z-index: -1;
     width: 15rem;
 }
-.calories{
+
+.calories {
     display: flex;
     gap: 2rem;
     background-color: var(--caloryCard);
     border-radius: 5px;
     padding: 1rem;
-    width:fit-content;
+    width: fit-content;
     position: absolute;
     top: 32rem;
     right: 28rem;
 
 }
-.calories > img{
+
+.calories>img {
     width: 3rem;
 }
-.calories > div{
+
+.calories>div {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
 }
-.calories > div >:nth-child(1)
-{
-color: var(--gray);
+
+.calories>div>:nth-child(1) {
+    color: var(--gray);
 
 }
-.calories > div >:nth-child(2)
-{
-color:white;
-font-size: 1.5rem;
+
+.calories>div>:nth-child(2) {
+    color: white;
+    font-size: 1.5rem;
 
 }
-.hero-blur{
+
+.hero-blur {
     width: 22rem;
     height: 30rem;
     left: 0;
+}
+
+@media screen and (max-width:768px) {
+    .hero {
+        flex-direction: column;
+    }
+
+    .hero-blur {
+
+        width: 14rem;
+    }
+
+    .the-best-ad {
+        margin-top: 0;
+        font-size: small;
+        align-items: center;
+        transform: scale(0.8);
+    }
+
+    .hero-text {
+
+        font-size: xx-large;
+        align-items: center;
+        justify-content: center;
+
+    }
+
+    .hero-text>div:nth-of-type(3) {
+        font-size: small;
+        font-weight: 200;
+        letter-spacing: 1px;
+        text-align: center;
+    }
+
+
+    .hero-buttons {
+        justify-content: center;
+    }
+
+    .figures>div>span:nth-of-type(1) {
+        font-size: large;
+    }
+
+    .figures>div>span:nth-of-type(2) {
+        font-size: small;
+    }
+
+    .right-h {
+        position: relative;
+        background: none;
+    }
+
+    .heart-rate {
+        left: 1rem;
+        top: 2rem;
+    }
+
+    .calories {
+        position: relative;
+        top: 5rem;
+        left: 2rem;
+    }
+
+    .calories>img {
+        width: 2rem;
+    }
+
+    .calories>div>:nth-child(2) {
+        color: white;
+        font-size: 1rem;
+
+    }
+
+    .hero-image {
+        position: relative;
+        width: 15rem;
+        left: 7rem;
+        top: 4rem;
+        align-self: center;
+
+
+    }
+
+    .hero-image-back {
+
+        width: 15rem;
+        left: 2rem;
+        top: 0rem;
+
+
+    }
+
+
 }
