--- a/src/components/Programs/Programs.css
+++ b/src/components/Programs/Programs.css
@@ -39,27 +39,53 @@
     fill: white;
 
 }
+
 .category>:nth-child(2) {
     font-size: 1rem;
     font-weight: bold;
 }
+
 .category>:nth-child(3) {
-    
+
     font-size: 0.9rem;
     line-height: 25px;
 }
-.join-now{
+
+.join-now {
     display: flex;
     align-items: center;
     gap: 2rem;
 }
 
-.join-now>img{
+.join-now>img {
     width: 1rem;
 }
 
-.category:hover{
-    background:var(--planCard);
-    cursor:pointer;
+.category:hover {
+    background: var(--planCard);
+    cursor: pointer;
 
+}
+
+@media screen and (max-width:768px) {
+
+
+    .programs-header {
+  flex-direction: column;
+        font-display: column;
+        gap: 1rem;
+        font-size: x-large;
+        align-items: center;
+        justify-content: center;
+        margin-top: 2rem;
+
+    }
+
+
+    .program-categories{
+        
+      flex-direction: column;
+
+
+    }
 }
