--- a/src/App.css
+++ b/src/App.css
@@ -2,11 +2,11 @@
 :root {
   --lightgray: #D9D9D9;
   --gray: #9c9c9c;
-  --orange: #f48915;
-  --darkGrey: #464D53;
+  --orange: #f41515ed;
+  --darkGrey: #2c2e30;
   --caloryCard: #656565;
-  --planCard: linear-gradient(210.41deg, #fa5042 1.14%, #ffa739 100.75%);
-  --appColor:  #3c3f45;
+  --planCard: linear-gradient(210.41deg, #b30a0a 1.14%, #e70404 100.75%);
+  --appColor:  #000000;
 }
 
 .App {
