--- a/src/App.css
+++ b/src/App.css
@@ -18,9 +18,9 @@
   gap: 6rem;
   overflow: hidden;
 }
-::-webkit-scrollbar{
+/* ::-webkit-scrollbar{
   display: none;
-}
+} */
 .stroke-text{
   color: transparent;
   font-family: Arial, Helvetica, sans-serif;
